--- a/ui/narrative/methods/build_gene_tree/display.yaml
+++ b/ui/narrative/methods/build_gene_tree/display.yaml
@@ -39,97 +39,107 @@ parameters :
             Description
         short-hint : |
             A description of the Gene Tree which will be added to the title in the tree image.
-    muscle_maxiters:
+    genome_disp_name_config :
+        ui-name : |
+            Display genome as
+        short-hint : |
+            Use the object name, object version, and/or scientific name of the Genome in the function profile report
+    skip_trimming :
+        ui-name : |
+            Skip Trimming
+        short-hint : |
+            For very similar genomes, indels may be key to phylogenetic inference, so skip trimming
+    muscle_maxiters :
         ui-name : |
             MUSCLE Max Iterations
         short-hint : |
             Limit iterations even if not converged (default: 16)
-    muscle_maxhours:
+    muscle_maxhours :
         ui-name : |
             MUSCLE Max Hours
         short-hint : |
             Limit time MUSCLE will run (default: 30 min)
-    gblocks_trim_level:
+    gblocks_trim_level :
         ui-name : |
             GBLOCKS Trim Level
         short-hint : |
             0=No gaps permitted, 1=Half occupancy, 2=Gaps ignored
-    gblocks_min_seqs_for_conserved:
+    gblocks_min_seqs_for_conserved :
         ui-name : |
             GBLOCKS Min Seqs for Conserved Pos
         short-hint : |
             Minimum number of sequences required with a conserved residue.
         long-hint : |
             Minimum number of sequences required with a conserved residue before a position (column) is considered a "Conserved Position". 0=Use MSA-derived default (e.g. for 14 seqs, default is 8).  Value must be &gt;= than N/2+1 and &lt;= Min Seqs For Flank Pos, where N=number of sequences.
-    gblocks_min_seqs_for_flank:
+    gblocks_min_seqs_for_flank :
         ui-name : |
             GBLOCKS Min Seqs for Flank Pos
         short-hint : |
             Minimum number of sequences required with a residue in a position (column) flanking a conserved position.
         long-hint : |
             Minimum number of sequences required with a residue in a position (column) flanking a conserved position before being considered a "Flank Position". 0=Use MSA-derived default (e.g. for 14 seqs, default is 11).  Value must be %gt;= Min Seqs for Conserved Pos and &lt;= N, where N=number of sequences.
-    gblocks_max_pos_contig_nonconserved:
+    gblocks_max_pos_contig_nonconserved :
         ui-name : |
             GBLOCKS Max Num Non-Conserved Pos
         short-hint : |
             Maximum number of non-conserved positions (columns) that may be included in a block.
         long-hint : |
             Maximum number of non-conserved positions (columns) that may be included in a block; 8=default.  Value must be >= 0 and <= number of aligned positions (32000 upper bound).
-    gblocks_min_block_len:
+    gblocks_min_block_len :
         ui-name : |
             GBLOCKS Min Block Len
         short-hint : |
             Minimum number of positions (columns) required to include a block in the output MSA.
         long-hint : |
             Minimum number of positions (columns) required to include a block in the output MSA; 10=default.  Value must be >= 2 and <= number of aligned positions (32000 upper bound).
-    gblocks_remove_mask_positions_flag:
+    gblocks_remove_mask_positions_flag :
         ui-name : |
             GBLOCKS Remove Masked Pos?
         short-hint : |
             "X" masking characters in first row?
         long-hint : |
             If first row of MSA has "X" masking characters, remove those positions (columns) from output MSA; Usually used for hypervariable regions (e.g. 16S); OFF=default.
-    fasttree_fastest:
+    fasttree_fastest :
         ui-name : |
             FASTTREE-2 Fastest?
         short-hint : |
             Speed up the neighbor joining phase & reduce memory usage (recommended for >50,000 sequences)
-    fasttree_pseudo:
+    fasttree_pseudo :
         ui-name : |
             FASTTREE-2 Pseudo Count?
         short-hint : |
             Use pseudocounts (recommended for highly gapped sequences)
-    fasttree_gtr:
+    fasttree_gtr :
         ui-name : |
             FASTTREE-2 GTR?
         short-hint : |
             Generalized time-reversible model (nucleotide alignments only)
-    fasttree_wag:
+    fasttree_wag :
         ui-name : |
             FASTTREE-2 WAG?
         short-hint : |
             Whelan-And-Goldman 2001 model (amino acid alignments only)
-    fasttree_noml:
+    fasttree_noml :
         ui-name : |
             FASTTREE-2 No ML?
         short-hint : |
             Turn off maximum-likelihood
-    fasttree_nome:
+    fasttree_nome :
         ui-name : |
             FASTTREE-2 No ME?
         short-hint : |
             Turn off minimum-evolution NNIs and SPRs
-    fasttree_cat:
+    fasttree_cat :
         ui-name : |
             FASTTREE-2 Num Rate Catgories (CAT)
         short-hint : |
             number of rate categories of sites (default 20)
-    fasttree_nocat:
+    fasttree_nocat :
         ui-name : |
             FASTTREE-2 No Cat?
         short-hint : |
             Use Constant Rates (instead of above Num Rate Categories)
-    fasttree_gamma:
+    fasttree_gamma :
         ui-name : |
             FASTTREE-2 Gamma
         short-hint : |
